<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="example.tql.indi.helloworld.MainActivity">
    <item
        android:id="@+id/pointCount"
        android:orderInCategory="100"
        android:title="@string/pc"
        app:showAsAction="never" />

    <item
        android:id="@+id/bmi"
        android:orderInCategory="100"
        android:title="@string/bmi"
        app:showAsAction="never" />

    <item
        android:id="@+id/exchange"
        android:orderInCategory="100"
        android:title="@string/title_activity_exchange"
        app:showAsAction="never" />
    <item
        android:id="@+id/exchangelist"
        android:orderInCategory="100"
        android:title="@string/exchangelist"
        app:showAsAction="never" />
</menu>
